# facial_detection

./: CMakeLists.txt
includes/: detector.h  god.h  renderer.h  stream.h
sources/: detector.cpp  god.cpp  main.cpp  renderer.cpp  stream.cpp
